--- a/Lesson_04/Home_work/Home_task_04.ipynb
+++ b/Lesson_04/Home_work/Home_task_04.ipynb
@@ -149,10 +149,305 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = -2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16.0"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "D = 32 / 2\n",
+    "D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "std = np.sqrt(D)\n",
+    "std"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание-4:\n",
+    "Рост взрослого населения города X имеет нормальное распределение.\n",
+    "Причем, средний рост равен 174 см, а среднее квадратичное отклонение равно 8 см.\n",
+    "Какова вероятность того, что случайным образом выбранный взрослый человек имеет рост:\n",
+    "а). больше 182 см\n",
+    "б). больше 190 см\n",
+    "в). от 166 см до 190 см\n",
+    "г). от 166 см до 182 см\n",
+    "д). от 158 см до 190 см\n",
+    "е). не выше 150 см или не ниже 190 см\n",
+    "ё). не выше 150 см или не ниже 198 см\n",
+    "ж). ниже 166 см."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as st"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "M = 174\n",
+    "S = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15865525393145707"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# а). больше 182 см\n",
+    "P1 = 1 - st.norm.cdf((182 - M) / S) - st.norm.cdf((0 - M) / S)\n",
+    "P1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.02275013194817921"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# б). больше 190 см\n",
+    "P2 = 1 - st.norm.cdf((190 - M) / S) - st.norm.cdf((0 - M) / S)\n",
+    "P2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8185946141203637"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# в). от 166 см до 190 см\n",
+    "P3 = st.norm.cdf((190 - M) / S) - st.norm.cdf((166 - M) / S)\n",
+    "P3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.6826894921370859"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# г). от 166 см до 182 см\n",
+    "P4 = st.norm.cdf((182 - M) / S) - st.norm.cdf((166 - M) / S)\n",
+    "P4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9544997361036416"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# д). от 158 см до 190 см\n",
+    "P5 = st.norm.cdf((190 - M) / S) - st.norm.cdf((158 - M) / S)\n",
+    "P5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9758999700201907"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# е). не выше 150 см или не ниже 190 см\n",
+    "P6 = st.norm.cdf((190 - M) / S) - st.norm.cdf((150 - M) / S)\n",
+    "P6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9973002039367398"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ё). не выше 150 см или не ниже 198 см\n",
+    "P7 = st.norm.cdf((198 - M) / S) - st.norm.cdf((150 - M) / S)\n",
+    "P7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.15865525393145707"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# ж). ниже 166 см.\n",
+    "P8 = st.norm.cdf((166 - M) / S) - st.norm.cdf((0 - M) / S)\n",
+    "P8"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Задание-5:\n",
+    "На сколько сигм (средних квадратичных отклонений) отклоняется рост человека, равный 190 см, от\n",
+    "математического ожидания роста в популяции, в которой M(X) = 178 см и D(X) = 25 кв.см?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.4"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(190-178) / np.sqrt(25)"
+   ]
   }
  ],
  "metadata": {
