--- a/Course_project/IMDB_EDA_course_project.ipynb
+++ b/Course_project/IMDB_EDA_course_project.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "collapsed_sections": [],
       "mount_file_id": "1jv2N4x2zoKrekf0cBrl3CKXI8BaXDBTZ",
-      "authorship_tag": "ABX9TyN3oPlKLpK56IS9UGFVlCko",
+      "authorship_tag": "ABX9TyP50FpJ1TyfpKYpI0RQrsmV",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -59,16 +59,16 @@
       "metadata": {
         "id": "-7iGMcSujxQ7",
         "colab_type": "code",
+        "outputId": "097442d0-fda7-4a60-8f58-b6988bec29c8",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "097442d0-fda7-4a60-8f58-b6988bec29c8"
+        }
       },
       "source": [
         "title_ratings.head()"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -153,16 +153,16 @@
       "metadata": {
         "id": "O3Loy34-j5EF",
         "colab_type": "code",
+        "outputId": "d2876410-4430-44f4-b220-021c7e51ca48",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 225
-        },
-        "outputId": "d2876410-4430-44f4-b220-021c7e51ca48"
+        }
       },
       "source": [
         "title_ratings.tail()"
       ],
-      "execution_count": 5,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -246,6 +246,39 @@
       "cell_type": "code",
       "metadata": {
         "id": "EPHI34wPkA_F",
+        "colab_type": "code",
+        "outputId": "dd3b825b-e3c6-4a03-af06-df257e34a2bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        }
+      },
+      "source": [
+        "title_ratings.info()"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 1031808 entries, tt0000001 to tt9916778\n",
+            "Data columns (total 2 columns):\n",
+            " #   Column         Non-Null Count    Dtype  \n",
+            "---  ------         --------------    -----  \n",
+            " 0   averageRating  1031808 non-null  float64\n",
+            " 1   numVotes       1031808 non-null  int64  \n",
+            "dtypes: float64(1), int64(1)\n",
+            "memory usage: 63.6+ MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SPNuslRzkst3",
         "colab_type": "code",
         "colab": {}
       },
