Corrected some errors

--- a/Course_project/IMDb_analysing_course_project.ipynb
+++ b/Course_project/IMDb_analysing_course_project.ipynb
@@ -8,7 +8,7 @@
       "collapsed_sections": [],
       "machine_shape": "hm",
       "mount_file_id": "1jv2N4x2zoKrekf0cBrl3CKXI8BaXDBTZ",
-      "authorship_tag": "ABX9TyMkcHWz6rfpxUn24fni1Oi5",
+      "authorship_tag": "ABX9TyNKK8gluPq+plK+qi1NG2+7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -946,59 +946,371 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "NzMAK9X8HPXb",
+        "id": "TlD7RHNlTJNI",
         "colab_type": "code",
-        "outputId": "eb00e019-9a7f-49c3-b6fc-2924ba387eac",
+        "outputId": "3c43699a-546a-4794-e1cc-21dc4d4b60ea",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 180
+          "height": 419
         }
       },
       "source": [
-        "gen = movies_2020.genres.unique()\n",
-        "gen\n"
+        "movies_2020 = movies[(movies.runtimeMinutes > 60) & (movies.startYear == 2020)]\n",
+        "movies_2020"
       ],
-      "execution_count": 15,
+      "execution_count": 16,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-6eeaa902f53f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgen\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmovies_2020\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgenres\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munique\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mgen\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'movies_2020' is not defined"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>tconst</th>\n",
+              "      <th>titleType</th>\n",
+              "      <th>primaryTitle</th>\n",
+              "      <th>originalTitle</th>\n",
+              "      <th>isAdult</th>\n",
+              "      <th>startYear</th>\n",
+              "      <th>endYear</th>\n",
+              "      <th>runtimeMinutes</th>\n",
+              "      <th>genres</th>\n",
+              "      <th>averageRating</th>\n",
+              "      <th>numVotes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>39526</th>\n",
+              "      <td>tt0062336</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>El tango del viudo y su espejo deformante</td>\n",
+              "      <td>El tango del viudo y su espejo deformante</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>70</td>\n",
+              "      <td>Drama</td>\n",
+              "      <td>6.1</td>\n",
+              "      <td>19</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>410960</th>\n",
+              "      <td>tt0926132</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Road to Red</td>\n",
+              "      <td>Road to Red</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>120</td>\n",
+              "      <td>Action,Adventure,Horror</td>\n",
+              "      <td>4.5</td>\n",
+              "      <td>442</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>424756</th>\n",
+              "      <td>tt0983946</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Fantasy Island</td>\n",
+              "      <td>Fantasy Island</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>109</td>\n",
+              "      <td>Adventure,Fantasy,Horror</td>\n",
+              "      <td>4.8</td>\n",
+              "      <td>13199</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>428489</th>\n",
+              "      <td>tt10006160</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Kala azar</td>\n",
+              "      <td>Kala azar</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>90</td>\n",
+              "      <td>Drama</td>\n",
+              "      <td>6.6</td>\n",
+              "      <td>12</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>429155</th>\n",
+              "      <td>tt10022990</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Seeru</td>\n",
+              "      <td>Seeru</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>123</td>\n",
+              "      <td>Action,Drama</td>\n",
+              "      <td>5.4</td>\n",
+              "      <td>178</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1031322</th>\n",
+              "      <td>tt9898858</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Coffee &amp; Kareem</td>\n",
+              "      <td>Coffee &amp; Kareem</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>88</td>\n",
+              "      <td>Action,Comedy</td>\n",
+              "      <td>5.1</td>\n",
+              "      <td>7663</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1031411</th>\n",
+              "      <td>tt9902160</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Herself</td>\n",
+              "      <td>Herself</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>97</td>\n",
+              "      <td>Drama</td>\n",
+              "      <td>7.6</td>\n",
+              "      <td>30</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1031528</th>\n",
+              "      <td>tt9908390</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Le lion</td>\n",
+              "      <td>Le lion</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>95</td>\n",
+              "      <td>Comedy</td>\n",
+              "      <td>4.9</td>\n",
+              "      <td>172</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1031612</th>\n",
+              "      <td>tt9910530</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>Svartklubb</td>\n",
+              "      <td>Svartklubb</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>79</td>\n",
+              "      <td>Horror</td>\n",
+              "      <td>6.3</td>\n",
+              "      <td>7</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1031621</th>\n",
+              "      <td>tt9911196</td>\n",
+              "      <td>movie</td>\n",
+              "      <td>De Beentjes van Sint-Hildegard</td>\n",
+              "      <td>De Beentjes van Sint-Hildegard</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2020</td>\n",
+              "      <td>\\N</td>\n",
+              "      <td>103</td>\n",
+              "      <td>Comedy,Drama</td>\n",
+              "      <td>7.8</td>\n",
+              "      <td>515</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>1060 rows × 11 columns</p>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "             tconst titleType  ... averageRating numVotes\n",
+              "39526     tt0062336     movie  ...           6.1       19\n",
+              "410960    tt0926132     movie  ...           4.5      442\n",
+              "424756    tt0983946     movie  ...           4.8    13199\n",
+              "428489   tt10006160     movie  ...           6.6       12\n",
+              "429155   tt10022990     movie  ...           5.4      178\n",
+              "...             ...       ...  ...           ...      ...\n",
+              "1031322   tt9898858     movie  ...           5.1     7663\n",
+              "1031411   tt9902160     movie  ...           7.6       30\n",
+              "1031528   tt9908390     movie  ...           4.9      172\n",
+              "1031612   tt9910530     movie  ...           6.3        7\n",
+              "1031621   tt9911196     movie  ...           7.8      515\n",
+              "\n",
+              "[1060 rows x 11 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TlD7RHNlTJNI",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "movies_2020 = movies[(movies.runtimeMinutes > 60) & (movies.startYear == 2020)]\n",
-        "movies_2020"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "aSUmPQp1Vwaz",
         "colab_type": "code",
-        "colab": {}
+        "outputId": "1ce4609a-0a21-4b2b-d573-0188db01dfae",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        }
       },
       "source": [
         "movies_2020.describe()"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>isAdult</th>\n",
+              "      <th>startYear</th>\n",
+              "      <th>runtimeMinutes</th>\n",
+              "      <th>averageRating</th>\n",
+              "      <th>numVotes</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>count</th>\n",
+              "      <td>1060.0</td>\n",
+              "      <td>1060.0</td>\n",
+              "      <td>1060.000000</td>\n",
+              "      <td>1060.000000</td>\n",
+              "      <td>1060.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>mean</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2020.0</td>\n",
+              "      <td>103.824528</td>\n",
+              "      <td>6.431509</td>\n",
+              "      <td>1044.346226</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>std</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>30.258648</td>\n",
+              "      <td>1.659376</td>\n",
+              "      <td>6010.174020</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>min</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2020.0</td>\n",
+              "      <td>61.000000</td>\n",
+              "      <td>1.100000</td>\n",
+              "      <td>5.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>25%</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2020.0</td>\n",
+              "      <td>88.000000</td>\n",
+              "      <td>5.475000</td>\n",
+              "      <td>14.000000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>50%</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2020.0</td>\n",
+              "      <td>98.000000</td>\n",
+              "      <td>6.600000</td>\n",
+              "      <td>41.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>75%</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2020.0</td>\n",
+              "      <td>115.000000</td>\n",
+              "      <td>7.500000</td>\n",
+              "      <td>194.500000</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>max</th>\n",
+              "      <td>0.0</td>\n",
+              "      <td>2020.0</td>\n",
+              "      <td>570.000000</td>\n",
+              "      <td>10.000000</td>\n",
+              "      <td>98920.000000</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "       isAdult  startYear  runtimeMinutes  averageRating      numVotes\n",
+              "count   1060.0     1060.0     1060.000000    1060.000000   1060.000000\n",
+              "mean       0.0     2020.0      103.824528       6.431509   1044.346226\n",
+              "std        0.0        0.0       30.258648       1.659376   6010.174020\n",
+              "min        0.0     2020.0       61.000000       1.100000      5.000000\n",
+              "25%        0.0     2020.0       88.000000       5.475000     14.000000\n",
+              "50%        0.0     2020.0       98.000000       6.600000     41.500000\n",
+              "75%        0.0     2020.0      115.000000       7.500000    194.500000\n",
+              "max        0.0     2020.0      570.000000      10.000000  98920.000000"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
     },
     {
       "cell_type": "code",
